--- a/src/adzone/templates/adzone/ad_tag.html
+++ b/src/adzone/templates/adzone/ad_tag.html
@@ -1,5 +1,5 @@
 {% comment %}
-A instace of AdBase is passed to this tag.
+A instance of AdBase is passed to this tag.
 
 ... more documentation needed ...
 
